--- a/Tarea 1.Rmd
+++ b/Tarea 1.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r, echo=FALSE}
 library(ggplot2)
 library(gapminder)
+library(dplyr)
 ```
 
 ## Ejercicio 1
@@ -43,7 +44,7 @@ ggplot(gapminder, aes(gdpPercap, lifeExp, colour = continent)) +
 
 En este graáfico sobrecargado, puedes modificar la transparencia y el tamaño de los puntos. Por ejemplo:
 
-```{r, echo = FALSE}
+```{r, echo = TRUE}
 ggplot(gapminder, aes(gdpPercap, lifeExp, colour = continent)) + 
   labs(x = "GDP Per Capita", y="Life Expectancy", colour = "Continent") + 
   geom_point(size = 1/3, alpha = 1/3) 
@@ -51,7 +52,7 @@ ggplot(gapminder, aes(gdpPercap, lifeExp, colour = continent)) +
 
 O, puedes usar facetas para muestra los datos de los continentes en sus propios gráficos. Por ejemplo:
 
-```{r, echo = FALSE}
+```{r, echo = TRUE}
 ggplot(gapminder, aes(gdpPercap, lifeExp)) +
     labs(x = "GDP Per Capita", y="Life Expectancy", facet = "Continent") + 
     geom_point(alpha=1/10) + facet_grid( ~continent)
